# tg_wbfinder

./: .env  docker-compose.yml  main.py
api/: api.py  dockerfile  pyproject.toml  requirements.txt
api/server/: WBfinder.py
client/: __init__.py  bot.py  dockerfile  main_dialogue.py  pyproject.toml  requirements.txt
server/: WBfinder.py  __init__.py
