[project]
name = "api"
version = "0.1.0"
description = "server's part of project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
